--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 GitHub <noreply@github.com>
 dafujii <41186511+dafujii@users.noreply.github.com>
 dafujii <dafujii.k@gmail.com>
+dafujii <dafujii@users.noreply.github.com>
